# robotica_opencv

./: DisplayImage.cpp  README.md
codigo_jorge/: CMakeLists.txt  detect_pose.cpp  detect_pose.h  detect_pose.launch  detect_pose.rar  package.xml
detect_red/: CMakeLists.txt  package.xml  plugins.xml
detect_red/include/detect_red/: detect_red.h
detect_red/launch/: detect_red.launch
detect_red/src/: detect_red.cpp
vision/: CMakeLists.txt  package.xml  plugins.xml
vision/src/: detect_red.cpp
