<?xml version="1.0"?>
<package format="2">
  <name>detect_pose</name>
  <version>0.0.0</version>
  <description>The detect_pose package</description>

  <maintainer email="jorge@todo.todo">jorge</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>mrs_lib</build_depend>
  <build_depend>mrs_msgs</build_depend>

  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>mrs_lib</build_export_depend>
  <build_export_depend>mrs_msgs</build_export_depend>

  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>mrs_lib</exec_depend>
  <exec_depend>mrs_msgs</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugins.xml"/>
  </export>
</package>
